--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "author": "Dan Bonehill",
   "license": "MIT",
   "scripts": {
-    "prestart": "node buildScripts/startMessage.js",
+    "prestart": "babel-node buildScripts/startMessage.js",
     "start": "npm-run-all --parallel open:src",
-    "open:src": "node buildScripts/srcServer.js"
+    "open:src": "babel-node buildScripts/srcServer.js"
   },
   "dependencies": {
     "whatwg-fetch": "3.0.0"
